--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -4,18 +4,18 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #fff;
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: black;
+  background: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
 }
